--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>Inhausblmoton</module>
         <module>codeforces</module>
         <module>Dareway Tools</module>
+        <module>door</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
